freesia/k8s/apps/temporis/remo-exporter/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remo-exporter
spec:
  ingressClassName: nginx
  rules:
  - host: remo-exporter.harvestasya.org
    http:
      paths:
      - backend:
          service:
            name: remo-exporter
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - remo-exporter.harvestasya.org
